[package]
name = "chaum_pedersen_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
hex = "0.4"
capnp = "0.19"
capnp-rpc = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7.17", features = ["compat"] }

[build-dependencies]
capnpc = "0.19"
